# stellaris-companion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODING_AGENT_SPRINTS.md  CONTRIBUTING.md  ELECTRON_APP_PLAN.md  FINAL_SHOWDOWN.md  FINDINGS.md  GAPS_ANALYSIS.md  LICENSE  MINIMAL_STRATEGIC_TEST.md  Makefile  OPTIMIZATION_FINAL.md  OPTIMIZATION_JOURNEY.md  OPTIMIZED_PROMPT_TEST.md  OPTIMIZED_VS_PRODUCTION.md  PLAN.md  PROMPT_COMPARISON_GEMINI3.md  PROMPT_OPTIMIZATION.md  README.md  SAVE_EXTRACTOR_REFACTOR_PLAN.md  SCHEMAS.md  TOOL_STRESS_TEST.md  TOOL_USAGE_ANALYSIS.md  announcements.json  benchmark_results.json  benchmark_results.md  comprehensive_stress_results.json  date_utils.py  dev.sh  enhanced_companion.py  enhanced_results.json  final_showdown_results.json  fix_plan.json  fresh_stress_results.json  middle_ground_results.json  minimal_strategic_results.json  option_a_results.json  personality.py  (+28 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: electron-release.yml  python.yml  rust-parser.yml  windows-artifact-build.yml
backend/: __init__.py  benchmark_comparison.py  electron_main.py  main.py  test_logging.py
backend/api/: __init__.py  server.py
backend/bot/: __init__.py  discord_bot.py
backend/core/: __init__.py  chronicle.py  companion.py  conversation.py  database.py  events.py  history.py  history_context.py  ingestion.py  ingestion_worker.py  json_utils.py  language.py  llm_providers.py  model_routing.py  reporting.py  save_watcher.py  signals.py  snapshot_reader.py  utils.py
backend/mcp/: __init__.py  context.py  server.py
cloudflare/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare/src/: auth.ts  discord.ts  durable-object.ts  index.ts
docs/: CHRONICLE_DEEP_DIVE.md  CHRONICLE_IMPLEMENTATION.md  CHRONICLE_INCREMENTAL.md  CHRONICLE_ROLEPLAY_FEATURES.md  CHRONICLE_SIGNAL_ANALYSIS.md  CHRONICLE_TESTING.md  CLAUSEWITZ_PARSER_PROPOSAL.md  CODEBASE_CLEANUP_FINDINGS.md  ELECTRON_APP_REVIEW.md  EXTRACTION_GAP_ANALYSIS.md  OPTION_B_MIGRATION.md  PHASE4_PRECOMPUTE_AND_PARSER_PLAN.md  PRECOMPUTE_ARCHITECTURE.md  PROMO_SITE.md  RELEASE_READINESS.md  RUST_PARSER_ARCHITECTURE.md  STORYTELLING_OPTIONS.md  STRESS_TEST_PLAN.md  T25_COMPARISON_RESULTS.md  architecture.md  data_model_diplomacy.md  data_model_fleets.md  data_model_resources.md  data_model_wars.md  dev-workflow.md  feedback-reporting.md  ipc-contract.md  local-mcp-integration-plan.md  patch-notes-gaps.md
electron/: .gitignore  electron-builder.yml  entitlements.mac.plist  main.js  package-lock.json  package.json  playwright.config.js  preload.js  release-notes.md
electron/e2e/: chronicle-refresh.spec.js
experiments/: README.md  benchmark_extraction.py  benchmark_option_b.py  test_all_prompts_gemini3.py  test_diplomacy_federation_extraction.py  test_economy_deep_dive_extraction.py  test_enhanced.py  test_final_showdown.py  test_fleet_composition_extraction.py  test_fresh_stress.py  test_galactic_community_extraction.py  test_middle_ground.py  test_minimal_strategic.py  test_optimized_prompt.py  test_optimized_vs_production.py  test_option_a.py  test_phase3.py  test_phase4_complete_briefing_extraction.py  test_politics_factions_extraction.py  test_progression_extraction.py  test_prompt_cleanup.py  test_specialty_systems_extraction.py  test_stress.py  test_subjects_extraction.py  test_t25_comparison.py  test_t25_llm_comparison.py  test_tool_stress.py  test_tool_usage.py
patches/: 4.0.md  4.1.md  4.2.md  4.3.md
scripts/: backend_build_info.py  build-all.sh  build-electron.sh  build-python.sh  capture_baseline.py  ci-smoke-check.sh  compare_WITHOUT_reference.txt  compare_WITH_reference.txt  ethics_authoritarian.txt  ethics_egalitarian.txt  ethics_machine.txt  package_mcpb.py  publish-electron.sh  smoke_mcp_stdio.py  test_chronicle.py  test_chronicle_compare.py  test_chronicle_ethics.py  test_chronicle_integration.py  test_chronicle_output.txt  test_chronicle_output_integration.txt  test_chronicle_prompt.txt  test_chronicle_variety.py  test_incremental_chronicle.py  test_incremental_output.txt  transform_patches.py  validate_migration.py  variety_session1.txt  variety_session2_run1.txt  variety_session2_run2.txt  variety_session2_run3.txt
stellaris-parser/: Cargo.toml
stellaris-parser/src/: edge_cases.rs  error.rs  main.rs  output.rs
stellaris-parser/src/commands/: extract.rs  iter.rs  mod.rs  serve.rs
stellaris_companion/: __init__.py  date_utils.py  paths.py  personality.py  rust_bridge.py  save_loader.py
stellaris_save_extractor/: __init__.py  armies.py  base.py  briefing.py  diagnostics.py  diplomacy.py  economy.py  endgame.py  extractor.py  geography.py  leaders.py  leviathans.py  metadata.py  military.py  name_resolution.py  planets.py  player.py  politics.py  projects.py  species.py  technology.py  validation.py
tests/: conftest.py  test_api_chat.py  test_api_chronicle_concurrency.py  test_api_sessions.py  test_chat_memory.py  test_chronicle.py  test_chronicle_first_chapter.py  test_cli.py  test_companion_dlc_context.py  test_database_event_ranges.py  test_dlc_mapping_contract.py  test_electron_main_save_inputs.py  test_events.py  test_extraction_validation.py  test_ingestion.py  test_language.py  test_llm_providers.py  test_llm_transform.py  test_llm_transform_stress.py  test_mcp_context.py  test_military.py  test_model_routing.py  test_name_resolution.py  test_patch_awareness.py  test_patch_loading.py  test_player.py  test_save_corpus.py  test_save_loader_platform_paths.py  test_signals.py  test_snapshot_dedupe.py  test_version_sync.py
(+142 files in other folders)
